--- a/src/app/wallets/sharedComponents/qr-code/qr-code.component.scss
+++ b/src/app/wallets/sharedComponents/qr-code/qr-code.component.scss
@@ -1,7 +1,7 @@
 ion-header {
   ion-toolbar {
     --background: none;
-    padding: 0 5px;
+    // padding: 0 5px;
     color: #000000;
     --border-style: none;
   }
